force-app/main/default/objects/TCS_Shift_Type__c/TCS_Shift_Type__c.object-meta.xml
<CustomObject>
    <label>TCS Shift Type</label>
    <nameField>
        <label>TCS Shift Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TCS Shift Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>