force-app/main/default/objects/TCS_Shift_Type__c/fields/Allow_Shift_Length_Input__c.field-meta.xml
<CustomField>
    <fullName>Allow_Shift_Length_Input__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Shift Length Input</label>
    <type>Checkbox</type>
</CustomField>