force-app/main/default/objects/TCS_Shift_Type__c/fields/ISS_Shift__c.field-meta.xml
<CustomField>
    <fullName>ISS_Shift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISS Shift</label>
    <type>Checkbox</type>
</CustomField>