force-app/main/default/objects/TCS_Shift_Type__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead, Initial contact made</fullName>
            </value>
            <value>
                <fullName>Unable to reach, Waitlist</fullName>
            </value>
            <value>
                <fullName>Screening appointment made</fullName>
            </value>
            <value>
                <fullName>Screening outcome accepted</fullName>
            </value>
            <value>
                <fullName>Screening outcome rejected</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Place Offered</fullName>
            </value>
            <value>
                <fullName>Place Confirmed</fullName>
            </value>
            <value>
                <fullName>Telephone Screening Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>