force-app/main/default/objects/TCS_Shift_Type__c/fields/Weekend_Shift__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Shift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekend Shift</label>
    <type>Checkbox</type>
</CustomField>